--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  background-color: rgb(20, 29, 31);
 }
 .header {
   position: relative;
@@ -18,15 +19,22 @@
   width: 100%;
   height: 60px;
   align-items: center;
-  justify-content: center;
-  color: rgb(34, 40, 49);
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.37);
+  justify-content: left;
+  color: rgb(255, 255, 255);
+}
+.header_logo {
+  width: 20px;
+  margin: auto 0px auto 10px;
+  filter: invert();
+}
+.header_text {
+  margin-left: 10px;
 }
 .header_menu {
   cursor: pointer;
   position: absolute;
   display: flex;
-  left: 10px;
+  right: 10px;
   width: 50px;
   height: 15px;
   padding: 2px;
@@ -35,7 +43,9 @@
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 8px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.37);
+  border: 1px solid rgb(199, 183, 183);
+
+  filter: invert();
   transition-duration: 200ms;
 }
 .header_menu:hover {
@@ -46,7 +56,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  width: 98%;
+  width: 100%;
   height: 40px;
   margin: 15px auto 0px auto;
 }
@@ -59,23 +69,23 @@
   width: 120px;
   height: 45px;
   margin-left: 10px;
-  border-radius: 25px;
-  color: rgb(20, 20, 20);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.37);
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(78, 78, 78);
   transition-duration: 200ms;
 }
 .add_note:hover {
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.37);
+  box-shadow: 3px 3px 10px rgba(129, 129, 129, 0.37);
 }
 .add_noteText {
-  margin: 5px 5px 5px 5px;
+  margin: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 12pt;
 }
 .add_noteIcon {
-  margin: 5px 0px 5px 5px;
+  margin: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,13 +94,12 @@
   filter: invert();
   border-radius: 15px;
 }
-
+/* Notes */
 .notes_container {
   display: flex;
   flex-direction: column;
   height: 80%;
-  border-radius: 10px;
-  margin: 15px auto 0px auto;
+  margin: 15px 0px 0px 0px;
 }
 .note_predef {
   position: relative;
@@ -99,12 +108,13 @@
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  margin: 5px 0px 5px 10px;
+  margin: 5px 10px 5px 10px;
   height: 30px;
-  width: 100px;
+  width: 120px;
   font-size: 11pt;
   color: white;
-  background-color: rgb(255, 145, 0);
+  border: 1px solid rgb(255, 145, 0);
+  background-color: rgb(20, 29, 31);
   transition-duration: 300ms;
 }
 .note_icon {
@@ -115,6 +125,7 @@
   bottom: 0px;
   right: 10px;
   margin: auto;
+  filter: invert();
 }
 .note_name {
   display: flex;
