--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgb(20, 29, 31);
+  background-color: rgb(243, 243, 243);
 }
 .header {
   position: relative;
@@ -20,38 +20,77 @@
   height: 60px;
   align-items: center;
   justify-content: left;
-  color: rgb(255, 255, 255);
+  color: rgb(29, 29, 29);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.082);
 }
-.header_logo {
+.headerLogo {
   width: 20px;
   margin: auto 0px auto 10px;
-  filter: invert();
 }
-.header_text {
+.headerText {
   margin-left: 10px;
 }
-.header_menu {
+.headerMenu {
   cursor: pointer;
-  position: absolute;
   display: flex;
-  right: 10px;
+  margin-left: 10px;
   width: 50px;
-  height: 15px;
+  height: 20px;
   padding: 2px;
   background-image: url(/arrow_fill_down.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 8px;
-  border: 1px solid rgb(199, 183, 183);
-
-  filter: invert();
+  background-color: rgb(238, 223, 212);
   transition-duration: 200ms;
+  filter: invert();
 }
-.header_menu:hover {
-  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.37);
+.headerMenu:hover {
+  box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.37);
 }
-.bar_container {
+
+/* ----------------------------------- */
+.menuBox {
+  position: absolute;
+  top: 0px;
+  margin: 10px;
+  z-index: 6;
+  width: 40%;
+  height: 95%;
+  border-radius: 15px;
+  background-color: rgb(22, 22, 22);
+}
+.menuHeader {
+  color: white;
+  font-size: 15pt;
+  margin: 20px 5px 50px 5px;
+  text-align: center;
+}
+.menuOptions {
+  cursor: pointer;
+  margin: 30px 0px 0px 5px;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  font-size: 11pt;
+  width: fit-content;
+  border-radius: 25px;
+  padding: 5px;
+  color: white;
+  transition-duration: 300ms;
+}
+.menuOptions:hover {
+  background-color: rgb(48, 48, 48);
+}
+.menuIcons {
+  filter: invert();
+  margin: 0px 5px 0px 5px;
+  width: 20px;
+}
+
+/* ----------------------------------- */
+.barContainer {
   position: relative;
   display: flex;
   justify-content: left;
@@ -60,7 +99,7 @@
   height: 40px;
   margin: 15px auto 0px auto;
 }
-.add_note {
+.addNote {
   position: relative;
   cursor: pointer;
   display: flex;
@@ -69,22 +108,23 @@
   width: 120px;
   height: 45px;
   margin-left: 10px;
-  border-radius: 5px;
-  color: rgb(255, 255, 255);
+  border-radius: 25px;
+  color: rgb(255, 253, 253);
+  background-color: rgb(49, 49, 49);
   border: 1px solid rgb(78, 78, 78);
   transition-duration: 200ms;
 }
-.add_note:hover {
+.addNote:hover {
   box-shadow: 3px 3px 10px rgba(129, 129, 129, 0.37);
 }
-.add_noteText {
+.addNoteText {
   margin: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 12pt;
 }
-.add_noteIcon {
+.addNoteIcon {
   margin: 5px;
   display: flex;
   justify-content: center;
@@ -95,13 +135,13 @@
   border-radius: 15px;
 }
 /* Notes */
-.notes_container {
+.notesContainer {
   display: flex;
   flex-direction: column;
   height: 80%;
   margin: 15px 0px 0px 0px;
 }
-.note_predef {
+.notePredef {
   position: relative;
   cursor: pointer;
   display: flex;
@@ -113,11 +153,10 @@
   width: 120px;
   font-size: 11pt;
   color: white;
-  border: 1px solid rgb(255, 145, 0);
   background-color: rgb(20, 29, 31);
   transition-duration: 300ms;
 }
-.note_icon {
+.noteIcon {
   position: absolute;
   display: none;
   width: 20px;
@@ -127,14 +166,14 @@
   margin: auto;
   filter: invert();
 }
-.note_name {
+.noteName {
   display: flex;
   font-size: 11pt;
 }
-.note_inside {
+.noteInside {
   font-size: 11pt;
 }
-.note_close {
+.noteClose {
   z-index: 2;
   cursor: pointer;
   display: none;
@@ -148,9 +187,9 @@
   width: 30px;
   height: 30px;
   background-color: rgb(255, 255, 255);
-  border-radius: 5px;
+  border-radius: 10px;
 }
-.note_close:hover {
+.noteClose:hover {
   background-color: rgb(182, 182, 182);
 }
 
