--- a/styles/notes.css
+++ b/styles/notes.css
@@ -20,7 +20,7 @@
 
   margin-top: 10px;
   margin-left: 50px;
-  min-height: 40px;
+  height: 40px;
   width: calc(100% - 50px);
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
