--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,3 +139,118 @@
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0);
 }
+
+.blur-background {
+  display: none;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+.confirm-box {
+  display: none;
+  z-index: 3;
+  position: absolute;
+  height: 130px;
+  width: 300px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
+}
+.confirm-header {
+  width: 100%;
+  height: 30px;
+  border-radius: 8px 8px 0px 0px;
+  background-color: rgb(240, 240, 240);
+}
+.confirm-header-title {
+  position: absolute;
+  left: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.confirm-close-icon {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  margin-right: 2.5px;
+  border-radius: 8px;
+  background-color: rgb(235, 58, 58);
+}
+.confirm-close-icon:hover {
+  background-color: rgb(209, 53, 53);
+}
+.close-icon {
+  filter: invert();
+  width: 18px;
+  height: 18px;
+}
+.confirm-text {
+  margin-top: 20px;
+}
+.btn-confirm-box {
+  display: flex;
+  justify-content: right;
+
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  height: 30px;
+}
+.btn-confirm {
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+  margin-right: 10px;
+  border-radius: 8px;
+  color: white;
+  background-color: rgb(0, 110, 255);
+  border: 1px solid rgb(0, 110, 255);
+  transition-duration: 200ms;
+}
+.btn-confirm:hover {
+  color: rgb(0, 110, 255);
+  border: 1px solid rgb(0, 110, 255);
+  background-color: rgb(255, 255, 255);
+}
+.btn-cancel {
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+  border-radius: 8px;
+  margin-right: 10px;
+  color: rgb(235, 58, 58);
+  border: 1px solid rgb(235, 58, 58);
+  background-color: rgb(255, 255, 255);
+  transition-duration: 200ms;
+}
+.btn-cancel:hover {
+  color: white;
+  background-color: rgb(235, 58, 58);
+  border: 1px solid rgb(235, 58, 58);
+}
+.toLeftAnim {
+  animation: noteToLeft 300ms 1 cubic-bezier(0.78, -0.56, 0.61, 1);
+}
+@keyframes noteToLeft {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-120%);
+  }
+}
+.smoothUp {
+  animation: animSmoothUp 300ms 1 cubic-bezier(0.78, -0.56, 0.61, 1);
+}
+@keyframes animSmoothUp {
+  0% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
