--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@
 .header-icon {
   width: 30px;
   margin-right: 10px;
+  filter: drop-shadow(6px 6px 5px rgba(0, 0, 0, 0.2));
 }
 .header-title {
   height: fit-content;
@@ -231,8 +232,6 @@
   color: white;
   background-color: rgb(235, 58, 58);
   border: 1px solid rgb(235, 58, 58);
-
-  color: rgb;
 }
 .toLeftAnim {
   animation: noteToLeft 300ms 1 cubic-bezier(0.78, -0.56, 0.61, 1);
@@ -255,4 +254,102 @@
   100% {
     transform: translateY(0px);
   }
+}
+
+.priority-box {
+  display: none;
+  z-index: 3;
+  position: absolute;
+  height: 130px;
+  width: 300px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
+}
+.priority-header {
+  width: 100%;
+  height: 30px;
+  border-radius: 8px 8px 0px 0px;
+  background-color: rgb(240, 240, 240);
+}
+.priority-header-title {
+  position: absolute;
+  left: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.priority-close-icon {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  margin-right: 2.5px;
+  border-radius: 8px;
+  background-color: rgb(235, 58, 58);
+}
+.priority-close-icon:hover {
+  background-color: rgb(209, 53, 53);
+}
+.close-icon {
+  filter: invert();
+  width: 18px;
+  height: 18px;
+}
+.priority-text {
+  margin-top: 20px;
+}
+.btn-priority-box {
+  display: flex;
+  justify-content: space-around;
+
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  height: 32px;
+}
+.btn-priority-low {
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 110, 255);
+  border: 1px solid rgb(0, 110, 255);
+  transition-duration: 200ms;
+}
+.btn-priority-low:hover {
+  color: rgb(0, 110, 255);
+  border: 1px solid rgb(0, 110, 255);
+  background-color: rgb(255, 255, 255);
+}
+.btn-priority-medium {
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+  border-radius: 8px;
+
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(235, 161, 64);
+  transition-duration: 200ms;
+}
+.btn-priority-medium:hover {
+  color: rgb(235, 161, 64);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(235, 161, 64);
+}
+.btn-priority-high {
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+  border-radius: 8px;
+
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(235, 58, 58);
+  background-color: rgb(235, 58, 58);
+  transition-duration: 200ms;
+}
+.btn-priority-high:hover {
+  color: rgb(209, 53, 53);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(235, 58, 58);
 }
