--- a/styles/notes.css
+++ b/styles/notes.css
@@ -11,6 +11,38 @@
   border-radius: 8px;
   background-color: white;
 }
+.note-priority {
+  cursor: pointer;
+  position: absolute;
+  right: -50px;
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgb(240, 255, 241);
+}
+.note-priority2 {
+  cursor: pointer;
+  position: absolute;
+  right: -100px;
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgb(255, 253, 240);
+}
+.note-priority3 {
+  cursor: pointer;
+  position: absolute;
+  right: -150px;
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgb(255, 240, 240);
+}
+
+.note-icon {
+  opacity: 30%;
+}
+
 .note-style-def {
   position: relative;
   display: flex;
@@ -33,12 +65,7 @@
   height: 20px;
   width: calc(100% - 50px);
   border: 0px;
-}
-.note-icon-done {
-  opacity: 30%;
-}
-.note-icon-done:hover {
-  opacity: 100%;
+  background-color: transparent;
 }
 
 .noteFromRight {
@@ -68,4 +95,66 @@
   100% {
     transform: translateX(-120%);
   }
+}
+
+.priority-box {
+  display: none;
+  flex-direction: column;
+  z-index: 3;
+  position: absolute;
+  height: 130px;
+  width: 300px;
+  background-color: rgb(240, 240, 240);
+  border-radius: 8px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
+}
+.priority-header {
+  width: 100%;
+  height: 30px;
+  border-radius: 8px 8px 0px 0px;
+  background-color: rgb(255, 255, 255);
+}
+.priority-header-title {
+  position: absolute;
+  left: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.priority-close-icon {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  margin-right: 2.5px;
+  border-radius: 8px;
+  background-color: rgb(235, 58, 58);
+}
+.priority-close-icon:hover {
+  background-color: rgb(209, 53, 53);
+}
+.close-icon {
+  filter: invert();
+  width: 18px;
+  height: 18px;
+}
+
+.priority-text {
+  height: fit-content;
+  width: fit-content;
+  margin-bottom: 50px;
+}
+.btn-priority-box {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 30px;
+  margin-bottom: 5px;
+}
+.btn-priority {
+  cursor: pointer;
+  width: 80px;
+  height: 30px;
+  border-radius: 8px;
+  color: white;
+  background-color: rgb(0, 110, 255);
 }
