--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,21 +15,20 @@
 }
 .header {
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: white;
 }
 .header-icon {
-  width: 35px;
+  width: 120px;
   margin-right: 10px;
-  filter: drop-shadow(6px 6px 5px rgba(0, 0, 0, 0.2));
 }
-.header-title {
+/* .header-title {
   height: fit-content;
   width: fit-content;
   font-weight: lighter;
   font-size: 16pt;
   color: green;
-}
+} */
 /* Header */
 /* Menu Panel */
 .btn-menu-normal {
@@ -42,39 +41,22 @@
   height: 30px;
   border-radius: 8px;
   color: white;
-  background-color: rgb(0, 110, 255);
-  border: 1px solid rgb(0, 110, 255);
+  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 110, 255); */
+  border: 1px solid rgb(0, 0, 0);
   transition-duration: 200ms;
 }
 .btn-menu-normal:hover {
-  color: rgb(0, 110, 255);
-  border: 1px solid rgb(0, 110, 255);
+  color: rgb(0, 0, 0);
+  border: 1px solid rgb(0, 0, 0);
   background-color: rgb(240, 240, 240);
 }
-.btn-menu-cancel {
-  z-index: 2;
-  cursor: pointer;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: 50px;
-  height: 30px;
-  border-radius: 8px;
-  color: white;
-  background-color: rgb(235, 58, 58);
-  border: 1px solid rgb(235, 58, 58);
-  transition-duration: 200ms;
-}
-.btn-menu-cancel:hover {
-  color: rgb(235, 58, 58);
-  border: 1px solid rgb(235, 58, 58);
-  background-color: rgb(240, 240, 240);
-}
+
 .sidebar {
-  z-index: 2;
+  z-index: 1;
   flex-direction: column;
   position: absolute;
-  bottom: 40px;
+  bottom: 20px;
   left: 20px;
   height: 0px;
   width: 30px;
@@ -126,7 +108,7 @@
   border-radius: 8px;
   width: 30px;
   height: 30px;
-  background-color: rgb(0, 110, 255);
+  background-color: rgb(0, 0, 0);
 }
 .sidebar-texts {
   position: absolute;
@@ -150,88 +132,6 @@
   background-color: transparent;
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
-}
-
-.confirm-box {
-  display: none;
-  z-index: 3;
-  position: absolute;
-  height: 130px;
-  width: 300px;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
-}
-.confirm-header {
-  width: 100%;
-  height: 30px;
-  border-radius: 8px 8px 0px 0px;
-  background-color: rgb(240, 240, 240);
-}
-.confirm-header-title {
-  position: absolute;
-  left: 10px;
-  color: rgba(0, 0, 0, 0.5);
-}
-.confirm-close-icon {
-  cursor: pointer;
-  width: 25px;
-  height: 25px;
-  margin-right: 2.5px;
-  border-radius: 8px;
-  background-color: rgb(235, 58, 58);
-}
-.confirm-close-icon:hover {
-  background-color: rgb(209, 53, 53);
-}
-.close-icon {
-  filter: invert();
-  width: 18px;
-  height: 18px;
-}
-.confirm-text {
-  margin-top: 20px;
-}
-.btn-confirm-box {
-  display: flex;
-  justify-content: right;
-
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  height: 30px;
-}
-.btn-confirm {
-  cursor: pointer;
-  width: 90px;
-  height: 30px;
-  margin-right: 10px;
-  border-radius: 8px;
-  color: white;
-  background-color: rgb(0, 110, 255);
-  border: 1px solid rgb(0, 110, 255);
-  transition-duration: 200ms;
-}
-.btn-confirm:hover {
-  color: rgb(0, 110, 255);
-  border: 1px solid rgb(0, 110, 255);
-  background-color: rgb(255, 255, 255);
-}
-.btn-cancel {
-  cursor: pointer;
-  width: 90px;
-  height: 30px;
-  border-radius: 8px;
-  margin-right: 10px;
-  color: rgb(235, 58, 58);
-  border: 1px solid rgb(235, 58, 58);
-  background-color: rgb(255, 255, 255);
-  transition-duration: 200ms;
-}
-.btn-cancel:hover {
-  color: white;
-  background-color: rgb(235, 58, 58);
-  border: 1px solid rgb(235, 58, 58);
 }
 
 .smoothUp {
